@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: lpi_spx.cpp,v 1.54 2005/08/25 14:27:59 bzfpfend Exp $"
+#pragma ident "@(#) $Id: lpi_spx.cpp,v 1.55 2005/08/26 14:09:39 bzfpfend Exp $"
 
 /**@file   lpi_spx.cpp
  * @brief  LP interface for SOPLEX 1.2.2
@@ -42,7 +42,7 @@
 #include "spxfastrt.h"
 
 /* reset the SCIP_DEBUG define to its original SCIP value */
-#undef SCIP_DEBUG
+[5~#undef SCIP_DEBUG
 #ifdef ___DEBUG
 #define SCIP_DEBUG
 #undef ___DEBUG
@@ -239,12 +239,13 @@ typedef SCIP_DUALPACKET ROWPACKET;           /* each row needs two bit of inform
 /** LP interface */
 struct SCIP_LPi
 {
-   SPxSCIP*         spx;                /**< our SPxSolver implementation */
+   SPxSCIP*              spx;                /**< our SPxSolver implementation */
    int*                  cstat;              /**< array for storing column basis status */
    int*                  rstat;              /**< array for storing row basis status */
    int                   cstatsize;          /**< size of cstat array */
    int                   rstatsize;          /**< size of rstat array */
    SCIP_PRICING          pricing;            /**< current pricing strategy */
+   SCIP_Bool             solved;             /**< was the current LP solved? */
 };
 
 /** LPi state stores basis information */
@@ -252,8 +253,8 @@ struct SCIP_LPiState
 {
    int                   ncols;              /**< number of LP columns */
    int                   nrows;              /**< number of LP rows */
-   COLPACKET*       packcstat;          /**< column basis status in compressed form */
-   ROWPACKET*       packrstat;          /**< row basis status in compressed form */
+   COLPACKET*            packcstat;          /**< column basis status in compressed form */
+   ROWPACKET*            packrstat;          /**< row basis status in compressed form */
 };
 
 
@@ -427,6 +428,14 @@ SPxLP::SPxSense spxObjsen(
    }
 }
 
+/** marks the current LP to be unsolved */
+static
+void invalidateSolution(SCIP_LPI* lpi)
+{
+   assert(lpi != NULL);
+   lpi->solved = FALSE;
+}
+
 
 
 
@@ -486,6 +495,7 @@ SCIP_RETCODE SCIPlpiCreate(
    (*lpi)->cstatsize = 0;
    (*lpi)->rstatsize = 0;
    (*lpi)->pricing = SCIP_PRICING_AUTO;
+   invalidateSolution(*lpi);
 
    /* set objective sense */
    SCIP_CALL( SCIPlpiChgObjsen(*lpi, objsen) );
@@ -551,6 +561,8 @@ SCIP_RETCODE SCIPlpiLoadColLP(
    assert(lhs != NULL);
    assert(rhs != NULL);
 
+   invalidateSolution(lpi);
+
    SPxSCIP* spx = lpi->spx;
    LPRowSet rows(nrows);
    DSVector emptyVector(0);
@@ -597,6 +609,8 @@ SCIP_RETCODE SCIPlpiAddCols(
    assert(nnonz == 0 || ind != NULL);
    assert(nnonz == 0 || val != NULL);
 
+   invalidateSolution(lpi);
+
    SPxSCIP* spx = lpi->spx;
    LPColSet cols(ncols);
    DSVector colVector(ncols);
@@ -634,6 +648,8 @@ SCIP_RETCODE SCIPlpiDelCols(
    assert(lpi->spx != NULL);
    assert(0 <= firstcol && firstcol <= lastcol && lastcol < lpi->spx->nCols());
 
+   invalidateSolution(lpi);
+
    lpi->spx->removeColRange(firstcol, lastcol);
 
    return SCIP_OKAY;   
@@ -654,6 +670,8 @@ SCIP_RETCODE SCIPlpiDelColset(
 
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
+
+   invalidateSolution(lpi);
 
    ncols = lpi->spx->nCols();
 
@@ -688,6 +706,8 @@ SCIP_RETCODE SCIPlpiAddRows(
    assert(nnonz == 0 || beg != NULL);
    assert(nnonz == 0 || ind != NULL);
    assert(nnonz == 0 || val != NULL);
+
+   invalidateSolution(lpi);
 
    SPxSCIP* spx = lpi->spx;
    LPRowSet rows(nrows);
@@ -726,6 +746,8 @@ SCIP_RETCODE SCIPlpiDelRows(
    assert(lpi->spx != NULL);
    assert(0 <= firstrow && firstrow <= lastrow && lastrow < lpi->spx->nRows());
 
+   invalidateSolution(lpi);
+
    lpi->spx->removeRowRange(firstrow, lastrow);
 
    return SCIP_OKAY;   
@@ -747,6 +769,8 @@ SCIP_RETCODE SCIPlpiDelRowset(
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
 
+   invalidateSolution(lpi);
+
    nrows = lpi->spx->nRows();
 
    /* SOPLEX' removeRows() method deletes the rows with dstat[i] < 0, so we have to negate the values */
@@ -767,6 +791,8 @@ SCIP_RETCODE SCIPlpiClear(
 
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
+
+   invalidateSolution(lpi);
 
    lpi->spx->clear();
 
@@ -791,6 +817,8 @@ SCIP_RETCODE SCIPlpiChgBounds(
    assert(ind != NULL);
    assert(lb != NULL);
    assert(ub != NULL);
+
+   invalidateSolution(lpi);
 
    for( i = 0; i < ncols; ++i )
    {
@@ -820,6 +848,8 @@ SCIP_RETCODE SCIPlpiChgSides(
    assert(lhs != NULL);
    assert(rhs != NULL);
 
+   invalidateSolution(lpi);
+
    for( i = 0; i < nrows; ++i )
    {
       assert(0 <= ind[i] && ind[i] < lpi->spx->nRows());
@@ -844,6 +874,8 @@ SCIP_RETCODE SCIPlpiChgCoef(
    assert(0 <= row && row < lpi->spx->nRows());
    assert(0 <= col && col < lpi->spx->nCols());
 
+   invalidateSolution(lpi);
+
    lpi->spx->changeElement(row, col, newval);
 
    return SCIP_OKAY;
@@ -859,6 +891,8 @@ SCIP_RETCODE SCIPlpiChgObjsen(
 
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
+
+   invalidateSolution(lpi);
 
    lpi->spx->changeSense(spxObjsen(objsen));
 
@@ -881,6 +915,8 @@ SCIP_RETCODE SCIPlpiChgObj(
    assert(lpi->spx != NULL);
    assert(ind != NULL);
    assert(obj != NULL);
+
+   invalidateSolution(lpi);
 
    for( i = 0; i < ncols; ++i )
    {
@@ -906,6 +942,8 @@ SCIP_RETCODE SCIPlpiScaleRow(
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
    assert(scaleval != 0.0);
+
+   invalidateSolution(lpi);
 
    /* get the row vector and the row's sides */
    SVector rowvec = lpi->spx->rowVector(row);
@@ -958,6 +996,8 @@ SCIP_RETCODE SCIPlpiScaleCol(
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
    assert(scaleval != 0.0);
+
+   invalidateSolution(lpi);
 
    /* get the col vector and the col's bounds and objective value */
    SVector colvec = lpi->spx->colVector(col);
@@ -1325,8 +1365,11 @@ SCIP_RETCODE spxSolve(
    assert(lpi != NULL);
    assert(lpi->spx != NULL);
 
+   invalidateSolution(lpi);
+
    SPxSolver::Status status = lpi->spx->solve();
    SCIPdebugMessage(" -> SOPLEX status: %d, basis status: %d\n", lpi->spx->getStatus(), lpi->spx->basis().status());
+   lpi->solved = TRUE;
 
    switch( status )
    {
@@ -1543,6 +1586,16 @@ SCIP_RETCODE SCIPlpiStrongbranch(
 
 /**@name Solution Information Methods */
 /**@{ */
+
+/** returns whether a solve method was called after the last modification of the LP */
+SCIP_Bool SCIPlpiWasSolved(
+   SCIP_LPI*             lpi                 /**< LP interface structure */
+   )
+{
+   assert(lpi != NULL);
+
+   return lpi->solved;
+}
 
 /** gets information about primal and dual feasibility of the current LP solution */
 SCIP_RETCODE SCIPlpiGetSolFeasibility(
@@ -2018,6 +2071,8 @@ SCIP_RETCODE SCIPlpiSetBase(
    assert(lpi->spx != NULL);
    assert(cstat != NULL);
    assert(rstat != NULL);
+
+   invalidateSolution(lpi);
 
    SPxSolver::VarStatus* spxcstat = new SPxSolver::VarStatus[lpi->spx->nCols()];
    SPxSolver::VarStatus* spxrstat = new SPxSolver::VarStatus[lpi->spx->nRows()];
