@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: scip.c,v 1.306 2005/08/24 17:26:56 bzfpfend Exp $"
+#pragma ident "@(#) $Id: scip.c,v 1.307 2005/08/26 14:09:40 bzfpfend Exp $"
 
 /**@file   scip.c
  * @brief  SCIP callable library
@@ -8361,6 +8361,31 @@ SCIP_RETCODE SCIPwriteLP(
    SCIP_CALL( checkStage(scip, "SCIPwriteLP", FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE) );
    
    SCIP_CALL( SCIPlpWrite(scip->lp, fname) );
+
+   return SCIP_OKAY;
+}
+
+/** gets the LP interface of SCIP;
+ *  with the LPI you can use all of the methods defined in scip/lpi.h;
+ *  Warning! You have to make sure, that the full internal state of the LPI does not change or is recovered completely after
+ *  the end of the method that uses the LPI. In particular, if you manipulate the LP or its solution (e.g. by calling one of the
+ *  SCIPlpiAdd...() or one of the SCIPlpiSolve...() methods), you have to check in advance whith SCIPlpiWasSolved() whether the LP
+ *  is currently solved. If this is the case, you have to make sure, the internal solution status is recovered completely at the
+ *  end of your method. This can be achieved by getting the LPI state before applying any LPI manipulations with SCIPlpiGetState()
+ *  and restoring it afterwards with SCIPlpiSetState() and SCIPlpiFreeState(). Additionally you have to resolve the LP with
+ *  the appropriate SCIPlpiSolve...() call in order to reinstall the internal solution status.
+ *  Make also sure, that all parameter values that you have changed are set back to their original values.
+ */
+SCIP_RETCODE SCIPgetLPI(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_LPI**            lpi                 /**< pointer to store the LP interface */
+   )
+{
+   assert(lpi != NULL);
+
+   SCIP_CALL( checkStage(scip, "SCIPgetLPI", FALSE, FALSE, FALSE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, FALSE) );
+
+   *lpi = SCIPlpGetLPI(scip->lp);
 
    return SCIP_OKAY;
 }
