@@ -37,6 +37,7 @@ interface:
 - new methods SCIPcliqueGetNVars(), SCIPcliqueGetVars(), SCIPcliqueGetValues(), SCIPcliqueGetId()
 - new methods SCIPaddClique(), SCIPcalcCliquePartition()
 - new event SCIP_EVENTTYPE_IMPLADDED
+- new method SCIPgetLPI() which makes all methods in scip/lpi.h available to the user
 
 plugins:
 - added command "write solution" to default dialog
